Try to make the fabric build work